# my-star

./: LICENSE
audio/adapter/: Cargo.toml  output.pcm
audio/adapter/src/: lib.rs  main.rs  recorder.rs  resample.rs
audio/adapter/src/ffi/: ipmb.rs  mod.rs
audio/adapter/src/player/: mod.rs  short.rs
audio/adapter/src/record/: mod.rs  short.rs
audio/adapter/src/utils/: mod.rs
audio/client/nodejs/: index.js  pnpm-lock.yaml  recorder.js
audio/client/tauri/: pnpm-lock.yaml
audio/client/tauri/src-tauri/: Cargo.toml
audio/client/tauri/src-tauri/src/: audio.rs  main.rs
client/nodejs/: ai.js  asr.js  package.json
client/tauri/: .eslintrc.cjs  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  vite.config.ts
client/tauri/src/: App.less  App.tsx  index.less  main.tsx
client/tauri/src-tauri/: Cargo.toml  tauri.conf.json
client/tauri/src-tauri/src/: asr.rs  audio.rs  main.rs
client/tauri/src/assets/: iconfont.js
client/tauri/src/components/asr/: index.tsx
client/tauri/src/components/audio-tab/: index.tsx
client/tauri/src/components/button/: index.tsx  style.less
client/tauri/src/components/chat/: index.tsx  style.less
client/tauri/src/components/icon/: index.tsx
client/tauri/src/services/: audio.ts  auth.ts  base.ts  index.ts  ws.ts
client/tauri/src/styles/: index.less
client/tauri/src/utils/: disposer.ts  promise.ts
net/: Cargo.toml
net/src/: lib.rs  main.rs
server/nodejs/: .gitignore  index.js  package.json  pnpm-lock.yaml
utils/: Cargo.toml
utils/src/: admin.rs  lib.rs  main.rs  net.rs  ws.rs
utils/src/core/: logger.rs  mod.rs  ws.rs
(+3 files in other folders)
