[package]
name = "mystar-net"
version = "0.1.0"
edition = "2021"

[lib]
name = "mystar_net"
path = "src/lib.rs"

[[bin]]
name = "mystar_net_bin"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
futures-util = "0.3.29"
tokio = { version = "1.34.0", features = ["full"] }
tokio-tungstenite = { features = ["native-tls"], version = "0.20.1" }
