[package]
name = "mystar_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "mystar_core"
path = "src/lib.rs"

[[bin]]
name = "mystar_core_bin"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
chrono = "0.4.31"
log = "0.4.20"
log4rs = "1.2.0"
parking_lot = "0.12.1"
tokio = { version = "1.34.0", features = ["full"] }
tokio-tungstenite = { features = ["native-tls"], version = "0.20.1" }
futures-util = "0.3.29"
tokio-stream = "0.1.14"
serde = "1.0.193"
serde_json = "1.0.108"
erased-serde = "0.3.31"
